# edge-edge-distance

./: CMakeLists.txt  LICENSE  README.md  log.md
example/: CMakeLists.txt  example.cpp
lib/: CMakeLists.txt  Distance.h  Vector.h
src/: Distance.h  Makefile  test  test.cpp
test/: Makefile  log.md  testgen  testgen.cpp  testscript  testscript.cpp
tests/: CMakeLists.txt  testgen.cpp  testscript.cpp
